--- a/index.html
+++ b/index.html
@@ -13,63 +13,103 @@
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="pdfs/tahsin_reasat_resume_academic.pdf">Resume</a></div>
+<div class="menu-item"><a href="research.html">Projects &amp; Research</a></div>
+<div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="resume.html">Resume</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Tahsin Reasat</h1>
 </div>
-<table class="imgtable"><tr><td>
-<img src="photos/CF.jpg" alt="My_Photo" width="145px" height="170px" />&nbsp;</td>
-<td align="left"><p><a href="https://reasat.github.io/">Tahsin Reasat</a> <br />
-greasat [at] gmail [dot] com <br /></p>
-<p>[<a href="https://github.com/reasat">GitHub</a>] [<a href="https://scholar.google.com/citations?user=8fCobOcAAAAJ&hl=en&oi=ao">Google Scholar</a>] [<a href="www.linkedin.com/in/tr42">LinkedIn</a>]</p>
-</td></tr></table>
 
-<h2>Education</h2>
+<p>
+Albany, CA, USA<br />
+greasat@gmail.com<br />
++1 615 714 1563<br />
+[<a href="https://scholar.google.com/citations?user=8fCobOcAAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a>]
+[<a href="https://www.linkedin.com/in/tr42">LinkedIn</a>]
+[<a href="https://github.com/Reasat">GitHub</a>]
+[<a href="https://www.kaggle.com/reasat">Kaggle</a>]
+</p>
+
+<h2>Summary</h2>
+<p>
+Applied ML engineer with 8+ years of experience building and deploying production ML systems across computer vision, NLP, and speech recognition.
+I specialize in end-to-end ML pipelines—from data curation and model training to evaluation, deployment, and monitoring—primarily on AWS.
+</p>
+
+<h2>Selected impact</h2>
 <ul>
-<li><p><a href="https://www.vanderbilt.edu/">Vanderbilt University</a>, <i>Nashville, TN</i> <br /> PhD, <a href="https://engineering.vanderbilt.edu/departments/electrical-computer-engineering/">Electrical and Computer Engineering</a> (August 2018 - Present) <br /> Supervisor: <a href="https://engineering.vanderbilt.edu/bio/?pid=david-smith">David Smith</a> </p>
-</li>
-<li><p><a href="https://www.buet.ac.bd/web/">Bangladesh University of Engineering &amp; Technology</a>, <i>Dhaka, Bangladesh</i> <br /> MS, <a https://eee.buet.ac.bd/">Electrical &amp; Electronic Engineering</a> (November 2015 - Jan 2019) <br /> Advisor: <a href="https://www.celiashahnaz.com/">Celia Shahnaz</a></p>
-</li>
-<li><p><a href="https://www.buet.ac.bd/web/">Bangladesh University of Engineering &amp; Technology</a>, <i>Dhaka, Bangladesh</i> <br /> BSc, <a href="http://eee.buet.ac.bd/">Electrical &amp; Electronic Engineering</a> (May 2010 - September 2015) <br /> 
- Supervisor: <a href="https://eee.buet.ac.bd/people/faculty/dmfu/">Md Forkan Uddin</a></p>
-</li>
-  
-<h2>Experience</h2>
-<strong>Vanderbilt University</strong>
-<p>Graduate Research Assistant</p>
-
-<li>Increased the efficiency of self-supervised learning models for histopathology images by using active learning. Data requirement was decreased by 93% and time requirement by 62%. <a href="https://arxiv.org/abs/2303.16247">[Arxiv]</a></li>
-<li>Created an MRI annotation platform on LabelStudio for physicians and created the largest soft tissue tumor segmentation dataset with 200 patients. Developed UNet based segmentation models for soft tissue tumor segmentation from MRI.</li>
-<li>Worked on the annotation of skin erythema on RGB images and developed a UNet based skin erythema segmentation model. First ever project that combines erythema segmentation and AI. <a href="https://onlinelibrary.wiley.com/doi/10.1111/bjh.18141">[Paper]</a></li>
-
-
-<strong>Bangladesh University of Engineering and Technology</strong>
-<p>Graduate Research Assistant<\p>
- 
-<li>Developed the first convolutional neural network (CNN) for inferior myocardial infarction (heart attack) detection from electrocardiogram (ECG) signals. This work was state-of-the-art at the time of publishing and outperformed all traditional methods. <a href="https://ieeexplore.ieee.org/abstract/document/8289058/">[Paper]</a> <a href="https://github.com/Reasat/cnn-imi">[Github]</a></li>
-  
-<strong>Bengali.ai</strong>
-<p>Co-founder</p>
-<p>Bengali.ai creates crowd-sourced Bengali language related open-source resources (datasets, CV and NLP libraries etc.) and releases them through a Kaggle competition to democratize AI. <a href="https://bengaliai.github.io/">[Full List of Projects]</a></p>
-<ul>
-    <li>Largest benchmark dataset for multi-target classification of handwritten Bengali Graphemes. 411k curated samples of unique commonly used Bengali graphemes with novel implications for alphasyllabary languages. <a href="https://link.springer.com/chapter/10.1007/978-3-030-86337-1_26">[Paper]</a> <a href="https://www.kaggle.com/c/bengaliai-cv19">[Competition & Dataset]</a></li>
-    <li>Developed the first ever Bengali Out-of-Distribution Speech Recognition (OOD-Speech) benchmarking dataset. 25,000+ people contributed in the development of this dataset. <a href="https://arxiv.org/abs/2305.09688">[Paper]</a> <a href="https://www.kaggle.com/competitions/bengaliai-speech/">[Competition & Dataset]</a></li>
-    <li>First multidomain large Bengali Document Layout Analysis Dataset (BaDLAD). Contains 33,695 human annotated document samples from six domains. <a href="https://www.kaggle.com/competitions/dlsprint/overview">[Paper]</a> <a href="https://www.kaggle.com/c/bengaliai-cv19">[Competition & Dataset]</a></li>
-    <li>Largest Bengali grammatical error detection and correction dataset. 100k+ sentence samples with word-level annotations. <a href="https://www.kaggle.com/c/bengali-ged">[Competition & Dataset]</a></li>
-    <li>The first ever Bengali Text to IPA (International Phonetic Alphabet) transcription dataset with 100k+ annotated sentences. Contains dialects from 6 different districts of Bangladesh. <a href="https://www.kaggle.com/competitions/regipa/overview">[Competition & Dataset]</a></li>
+<li><p>Built a human-in-the-loop fax document processing system on AWS; reduced manual processing time by 80&#8211;90% and supported 300&#8211;475 faxes/day.</p></li>
+<li><p>Built an LLM-based system to extract structured data from insurance denial documents; enabled recovery of ~ $3M/year in lost claims.</p></li>
+<li><p>Built an ontology-aware gene prioritization model (XGBoost) and deployed it to EC2; reduced manual variant analysis workload by 50%.</p></li>
+<li><p>Led open-source research initiatives via Kaggle competitions (Bengali.AI), including Kaggle grants totaling $200k.</p></li>
 </ul>
-<strong>Daffodil International University</strong>
-<p>Lecturer, Department of Electrical and Electronic Engineering</p>
-<p>Instructed Course: Digital Electronic Circuits, Digital Signal Processing, Discrete Structures, Data Communication and Computer Networks, etc.</p>
 
+<h2>Experience</h2>
 
-<li><p>Undergrad Research</p>
+<h3>Ambry Genetics (AI Engineer, Remote) &#8212; 2025&#8211;Present</h3>
+<p>Built AI-driven solutions to enhance operational efficiency and extract insights from biomedical and business data.</p>
+<ul>
+<li><p><b>Human-in-the-loop Document AI (Fax)</b></p>
+<ul>
+<li><p>Built a human-in-the-loop fax document processing system to automate document splitting, classification, and patient-to-order matching; reduced manual processing time by 80&#8211;90% and supported 300&#8211;475 faxes/day.</p></li>
+<li><p>Designed Temporal workflow logic (state machine, routing, retries/fallbacks, and human review paths) and implemented Temporal worker services (background processes) for orchestration and AI inference.</p></li>
+<li><p>Implemented OCR and LLM pipelines using AWS Textract and AWS Bedrock; persisted document metadata and workflow state in Amazon Aurora PostgreSQL.</p></li>
+<li><p>Built reviewer-facing UIs and a Streamlit dashboard for throughput and model performance reporting on an internal test dataset.</p></li>
+</ul>
+</li>
+<li><p><b>Insurance Denial Extraction</b>: Designed and implemented an LLM-based system to extract structured data from insurance denial documents, enabling recovery of approximately $3M annually in lost claims.</p></li>
+<li><p><b>Clinical Genomics ML</b>: Developed ontology-aware features for a graph data structure and built an XGBoost model to prioritize genes; deployed to an EC2 instance and reduced manual variant analysis workload by 50%.</p></li>
+<li><p><b>Pedigree detection</b>: Built an LLM-based pedigree image classifier on AWS Bedrock, achieving 99% accuracy on an internal test dataset.</p></li>
+</ul>
 
-  
+<h3>Bengali.AI (Co-founder) &#8212; 2017&#8211;Present</h3>
+<p>
+Bengali.AI builds open-source resources—datasets, libraries, and models—for ASR, CV, and NLP, released through Kaggle competitions to democratize AI.
+[<a href="https://www.bengali.ai/projects">Full project list</a>]
+</p>
+<ul>
+<li><p>Engineered normalizer and parser libraries for Abugida Unicode texts supporting 7 Indic languages; improved LLM robustness under adversarial conditions by 5&#8211;10 points across multiple metrics. [<a href="https://aclanthology.org/2024.lrec-main.1479/">paper</a>]</p></li>
+<li><p>Led creation of a Bengali OOD speech recognition benchmark: 1100+ hours from 22,000+ contributors across 17 domains; fine-tuned GPT-based Whisper for regional Bengali ASR. [<a href="https://arxiv.org/abs/2305.09688">paper</a>] [<a href="https://www.kaggle.com/competitions/bengaliai-speech/">Kaggle</a>] [<a href="https://huggingface.co/spaces/bengaliAI/regional_bengali-asr_tugstugi_whisper-medium">demo</a>]</p></li>
+<li><p>Developed a Bengali document layout analysis dataset (BaDLAD) with 33,695 annotated samples across six domains; fine-tuned Mask R-CNN and YOLO-based object detection models. [<a href="https://link.springer.com/chapter/10.1007/978-3-031-41676-7_19">paper</a>]</p></li>
+</ul>
+
+<h3>Vanderbilt University (Graduate Research Assistant, ECE) &#8212; 2018&#8211;2024</h3>
+<ul>
+<li><p>Built an active learning-based training pipeline for SimCLR on histopathology images; reduced data requirements by 93% and training time by 62%. [<a href="https://www.sciencedirect.com/science/article/pii/S2666827024000537">paper</a>] [<a href="https://github.com/Reasat/data_efficient_cl">code</a>]</p></li>
+<li><p>Curated an MRI soft tissue tumor segmentation dataset (199 patients) and developed multimodal UNet + Segment Anything Model (SAM) approaches; achieved Dice 80% (state of the art). [<a href="https://www.arxiv.org/abs/2409.03110">paper</a>] [<a href="https://github.com/Reasat/mstt/">code</a>]</p></li>
+</ul>
+
+<h3>Bangladesh University of Engineering and Technology (Graduate Research Assistant, EE) &#8212; 2016&#8211;2018</h3>
+<ul>
+<li><p>Engineered a CNN for inferior myocardial infarction detection from ECG signals; accuracy 84.54% (state of the art at time). [<a href="https://ieeexplore.ieee.org/abstract/document/8289058/">paper</a>] [<a href="https://github.com/Reasat/cnn-imi">code</a>]</p></li>
+</ul>
+
+<h2>Technical skills</h2>
+<ul>
+<li><p><b>ML</b>: PyTorch, TensorFlow, Keras, Transformers, PEFT/LoRA, scikit-learn, XGBoost</p></li>
+<li><p><b>Cloud &amp; MLOps</b>: AWS (Bedrock, EC2, S3, Textract, Aurora PostgreSQL), Temporal, Docker, distributed GPU training, Jira</p></li>
+<li><p><b>Backend/Data</b>: Python, SQL, FastAPI, Flask, Pandas, NumPy, OpenCV, Streamlit</p></li>
+</ul>
+
+<h2>Grants and awards</h2>
+<ul>
+<li><p>Winner of multiple Kaggle research grants (2019, 2023) for hosting research code competitions, totaling $200k. [<a href="https://www.kaggle.com/organizations/BengaliAI/competitions">competition examples</a>]</p></li>
+<li><p>Winner of the Kaggle Community Competition Creator Prize (July 2022; $5k).</p></li>
+</ul>
+
+<h2>Selected publications</h2>
+<ul>
+<li><p>Data Efficient Contrastive Learning in Histopathology using Active Sampling. <i>Machine Learning with Applications</i>, 2024. [<a href="https://www.sciencedirect.com/science/article/pii/S2666827024000537">link</a>]</p></li>
+<li><p>Detection of Inferior Myocardial Infarction using Shallow Convolutional Neural Networks. <i>IEEE R10-HTC</i>, 2017. [<a href="https://ieeexplore.ieee.org/document/8289058">link</a>]</p></li>
+<li><p>Abugida Normalizer and Parser for Unicode Texts. <i>LREC-COLING</i>, 2024. [<a href="https://aclanthology.org/2024.lrec-main.1479/">link</a>]</p></li>
+</ul>
+
 </td>
 </tr>
 </table>
 </body>
 </html>
+
+
